# seqan-sameval

./: CMakeLists.txt  LICENSE  sameval.cpp  sampe2se.cpp
